--- a/src/chat.html
+++ b/src/chat.html
@@ -18,10 +18,8 @@
     </div>
     <span><h1>PinkLink Chat</h1></span>
   </div>
-  <div id="contacts" style="border: solid black 1px; height: 100px">
-    <h1>Users</h1>
-  </div>
-
+<div class="inline">
+  <div id="contacts" style="border: solid black 1px; height: 100px"></div>
   <div id="chat">
     <div id="messages"></div>
     <form id="chat-controls" onsubmit="return false;">
@@ -29,20 +27,7 @@
       <button class="form__btn" id="btn" onclick="sendMessage()">Send</button>
     </form>
   </div>
-<!--<div id="container">-->
-<!--  <aside>-->
-<!--    <ul id="users"></ul>-->
-<!--  </aside>-->
-<!--  <main>-->
-<!--    <ul id="chat"></ul>-->
-<!--    <footer>-->
-<!--      <input id="message" type="text">-->
-<!--      <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1940306/ico_picture.png" alt="">-->
-<!--      <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1940306/ico_file.png" alt="">-->
-<!--      <button id="btn">Send</button>-->
-<!--    </footer>-->
-<!--  </main>-->
-<!--</div>-->
+</div>
 </div>
 </body>
 </html>
