--- a/src/registration.html
+++ b/src/registration.html
@@ -7,20 +7,16 @@
     <meta name="description" content="Servlet chat application">
     <meta name="author" content="PinkLink Team">
     <link rel="stylesheet" href="/dist/index.css">
-    <!--    <link rel="preconnect" href="https://fonts.gstatic.com">-->
-    <!--    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,500;1,700&display=swap"-->
-    <!--          rel="stylesheet">-->
 </head>
-
 <body id="body_auth">
 <div id="root">
-    <div name="logo_container" class="logo_container">
-        <div name="logo" class="logo">
+    <div class="logo_container">
+        <div class="logo">
             <img src="img/logo_pl.png">
         </div>
         <span><h1>PinkLink Chat</h1></span>
     </div>
-    <div name="form_container" class="form_container">
+    <div class="form_container">
         <form name="AuthForm" class="form" method="post" autocomplete="off">
             <input type="text" class="form__input" name="nickName" placeholder="Enter nickname" maxlength="10" required="">
             <div class="error" name="error_login"></div>
@@ -60,73 +56,5 @@
         </div>
     </div>
 </div>
-
 </body>
-
 </html>
-
-<!--<!DOCTYPE html>-->
-<!--<html lang="en">-->
-
-<!--<head>-->
-<!--    <meta charset="UTF-8">-->
-<!--    <meta http-equiv="X-UA-Compatible" content="IE=edge">-->
-<!--    <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
-<!--    <link rel="preconnect" href="https://fonts.gstatic.com">-->
-<!--    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,500;1,700&display=swap"-->
-<!--        rel="stylesheet">-->
-<!--    <title>PinkLink Chat</title>-->
-<!--</head>-->
-
-<!--<body id = "body_reg">-->
-<!--<div id="root">-->
-<!--    <div name="logo_container" class="logo_container">-->
-<!--        <div name="logo" class="logo">-->
-<!--            <img src="img/logo_pl.png">-->
-<!--        </div>-->
-<!--        <span><h1>PinkLink Chat</h1></span>-->
-<!--    </div>-->
-<!--    <div class="inner">-->
-<!--        <div class="box-auth">-->
-<!--            <form class="box-auth__form">-->
-<!--                <h1 class="box-auth__header">Sign up</h1>-->
-
-<!--                <label class="box-auth__label">Login</label>-->
-<!--                <input class="box-auth__input" type="text" name="login" pattern="[a-zA-Z0-9]{3,25}" required>-->
-
-<!--                <label class="box-auth__label">email</label>-->
-<!--                <input class="box-auth__input" type="email" name="email" pattern="[a-zA-Z0-9]{3,50}" required>-->
-
-<!--                <label class="box-auth__label">nickname</label>-->
-<!--                <input class="box-auth__input" type="text" name="nickname" pattern="[a-zA-Z0-9]{6,25}" required>-->
-
-<!--                <label class="box-auth__label">Your phone</label>-->
-<!--                <input class="box-auth__input" type="text" name="phone" pattern="[a-zA-Z0-9]{9,15}" required>-->
-
-<!--                <label class="box-auth__label">Password</label>-->
-<!--                <input class="box-auth__input" type="text" name="password" pattern="[a-zA-Z0-9]{6,25}" required>-->
-
-<!--                <label class="box-auth__label">Confirm password</label>-->
-<!--                <input class="box-auth__input" type="text" name="confirm" pattern="[a-zA-Z0-9]{6,25}" required>-->
-
-<!--                <label class="box-auth__label">Your first name</label>-->
-<!--                <input class="box-auth__input" type="text" name="firstname" pattern="[a-zA-Z0-9]{6,25}" required>-->
-
-<!--                <label class="box-auth__label">Your last name</label>-->
-<!--                <input class="box-auth__input" type="text" name="lastname" pattern="[a-zA-Z0-9]{6,25}" required>-->
-
-<!--                <input class="box-auth__submit" type="submit" name="submit" id="submit-reg" value="Create account">-->
-<!--                <div class="box-auth__redirect">Already have an account? <a href="index.html"-->
-<!--                        class="box-auth__link">Sign in</a></div>-->
-<!--                <div class="box-auth__redirect box-auth__redirect&#45;&#45;guess"><a href="chat.html"-->
-<!--                        class="box-auth__link box-auth__link&#45;&#45;guess" id="guest">Log in </a>as Guest</div>-->
-<!--            </form>-->
-<!--            <div class="box-auth__error">-->
-<!--                <p class="error-text"></p>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js"></script>-->
-<!--</body>-->
-
-<!--</html>-->
