add working chat

--- a/src/chat.html
+++ b/src/chat.html
@@ -5,10 +5,7 @@
   <title>PinkLink Chat</title>
   <meta name="description" content="Servlet chat application">
   <meta name="author" content="PinkLink Team">
-<!--  <link rel="preconnect" href="https://fonts.gstatic.com">-->
-<!--  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,500;1,700&display=swap"-->
-<!--        rel="stylesheet">-->
-  <link rel="stylesheet" href="/dist/chat.css">
+<!--  <link rel="stylesheet" href="/dist/chat.css">-->
 </head>
 <body id="body_chat">
 <div id="root">
