--- a/src/registration.html
+++ b/src/registration.html
@@ -6,7 +6,7 @@
     <title>PinkLink Chat</title>
     <meta name="description" content="Servlet chat application">
     <meta name="author" content="PinkLink Team">
-    <link rel="stylesheet" href="/dist/index.css">
+<!--    <link rel="stylesheet" href="/dist/index.css">-->
 </head>
 <body id="body_auth">
 <div id="root">
