--- a/src/registration.html
+++ b/src/registration.html
@@ -6,9 +6,8 @@
     <title>PinkLink Chat</title>
     <meta name="description" content="Servlet chat application">
     <meta name="author" content="PinkLink Team">
-<!--    <link rel="stylesheet" href="/dist/index.css">-->
 </head>
-<body id="body_auth">
+<body id="body_auth" style="background-image: url('/img/reg_bg.png')">
 <div id="root">
     <div class="logo_container">
         <div class="logo">
@@ -47,8 +46,13 @@
             <br>
             <button type="submit" class="form__btn" id="submit-reg">SIGN UP</button>
             <br>
-            <div class="box-auth__redirect">Do you have an account?
-                <a href="index.html" class="box-auth__link">Sign up</a>
+            <div class="box-auth__redirect">
+                <br>
+                <spam>
+                    <a href="index.html" class="box-auth__link">Sign in</a>
+                    <img src="img/line_g.webp" style="height: 25px; width: 10px">
+                    <a href="registration.html" class="box-auth__link">Forget password</a>
+                </spam>
             </div>
         </form>
         <div class="box-auth__error">
