--- a/src/myaccount.html
+++ b/src/myaccount.html
@@ -37,8 +37,8 @@
             <input type="text" class="form__input" id="5" name="login"  maxlength="10" required=""style="width: 500px">
             <div class="error" name="error_login"></div>
             <br>
-            <label for="5" class="box-auth__link">Password......</label>
-            <input type="password" class="form__input" name="password"  maxlength="10" required="" style="width: 500px">
+            <label for="6" class="box-auth__link">Password......</label>
+            <input type="password" class="form__input" id="6"name="password"  maxlength="10" required="" style="width: 500px">
             <div class="error" name="error_password"></div>
             <br>
             <label for="7" class="box-auth__link">Phone..........</label>
@@ -47,6 +47,11 @@
             <br>
             <label for="8" class="box-auth__link">Company name.</label>
             <input type="text" class="form__input" id="8" name="companyName" style="width: 500px">
+            <br>
+            <br>
+            <label for="9" class="box-auth__link">Avatar........</label>
+            <img id="9" src="img/defaul_icon.png">
+            <input type="file" id="picture">
             <div class="error" name="error_login"></div>
             <br>
             <button type="submit" class="form__btn" id="submit-reg">CHANGE DATA</button>
