--- a/src/chat.html
+++ b/src/chat.html
@@ -17,6 +17,7 @@
 <div class="inline">
   <div id="contacts" style="border: solid black 1px; height: 100px">
     <a href="myaccount.html" class="box-auth__link">My account</a>
+    <div id="online"></div>
   </div>
   <div id="chat">
     <div id="messages"></div>
